updated background color

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 $font-stack: Arial, Helvetica, sans-serif;
 
 body{
-    background-color: #85469e;
+    background-color: #7ea8df;
     font-family: $font-stack;
 }
 
