--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,10 +13,13 @@ body{
     margin-top: 15%;
     margin-bottom: 10px;
     text-align: center;
+    
 }
 
 .nameShowcase{
     font-size: 60px;
+    text-shadow: 2px 2px black;
+    
 }
 
 .nameSubtitle{
