--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -7,11 +7,17 @@
   margin: 5px;
   font-size: 20px;
   background-color: #b9b9b9;
+  border: 3px solid black;
   border-width: 3px;
   border-bottom-color: black;
   border-top-color: white;
   border-left-color: white;
   border-right-color: black;
+  text-decoration: none;
+}
+
+a {
+  color: black;
 }
 
 * {
@@ -33,6 +39,7 @@ body {
 }
 
 .nameShowcase {
+  font-family: 'Lato', sans-serif;
   font-size: 60px;
   text-shadow: 2px 2px black;
 }
